--- a/style.css
+++ b/style.css
@@ -204,11 +204,13 @@ section nav{
 @media only screen and ( max: 320px){
     .grid-container{
         grid-template-rows: 1 auto;
+        text-align: center;
        
     }
     .diploma{
         display: flex;
         flex-direction: column;
         margin-left: 2px;
+        text-align: center;
     }
 }
