--- a/style.css
+++ b/style.css
@@ -6,7 +6,27 @@ header{
 .navbar{
     align-content: left; 
 }
-.grid-container{
+.Grid-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+    padding: 1rem;
+}
+
+.grid-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    margin: auto;
+}
+
+.grid-item img{
+    width: 100%;
+    height: auto;
+    border: 1px solid #ccc;
+}
+/*
+.Grid-container{
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(3, 1fr);
@@ -18,7 +38,7 @@ header{
 .grid-item{
     width: auto;
 }
-
+*/
 .frutos-secos-container{
     display: grid;
     grid-template-rows: repeat(3, auto);
@@ -80,7 +100,7 @@ header{
 }
 
 
-.grid-container img {
+.Grid-container img {
     border-radius: 5%;
 }
 
@@ -162,9 +182,9 @@ nav{
     }
     
 }
-.diploma img{
+.Diploma img{
     border-radius:  5%;
-    margin-left: 500px;
+    align-content: center;
     padding: 5px;
 }
 
@@ -200,17 +220,16 @@ section nav{
     height: 250px;
 }
 
-
-@media only screen and ( max: 320px){
-    .grid-container{
+/*
+@media only screen and ( max: 424px){
+    .Grid-container{
         grid-template-rows: 1 auto;
         text-align: center;
        
     }
-    .diploma img{
-       display: flex;
-       flex-direction: column;
-        margin-left: 2px;
-        text-align: left;
+    .Diploma img{
+        grid-template-rows: 1 auto;
+        align-content: center;
     }
 }
+*/
