--- a/style.css
+++ b/style.css
@@ -25,20 +25,7 @@ header{
     height: auto;
     border: 1px solid #ccc;
 }
-/*
-.Grid-container{
-    display: grid;
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-columns: repeat(3, 1fr);
-    text-align: center;
-    gap: 20px;
-    border: 5px solid orangered;
-    padding: 55px;
-}
-.grid-item{
-    width: auto;
-}
-*/
+
 .frutos-secos-container{
     display: grid;
     grid-template-rows: repeat(3, auto);
@@ -184,7 +171,6 @@ nav{
 }
 .Diploma img{
     border-radius:  5%;
-    align-content: center;
     padding: 5px;
 }
 
@@ -225,10 +211,9 @@ section nav{
     .Grid-container{
         grid-template-rows: 1 auto;
         text-align: center;
-       
+        row-gap: 5px;
     }
     .Diploma img{
-        grid-template-rows: 1 auto;
-        align-content: center;
+       align-content: center;
     }
 }
