--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header{
     width: 100%;
     height: auto;
     border: 1px solid #ccc;
+    border-radius: 5%;
 }
 
 .frutos-secos-container{
@@ -122,7 +123,14 @@ h4{
     border-top: 25px;
     text-align: center;
     background-color: orangered;
+     
 }
+.pacifico-regular {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 .foto{
     margin-left: 430px;
 }
@@ -135,15 +143,35 @@ p{
     padding: 30px;
     text-align: center;
 
+
 }
 ul{
     color: orangered; 
 }
 
-.budin{
-display: grid;
-grid-template-columns: repeat (2, auto);
-grid-template-rows: repeat (2, auto);
+.recetas-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 20px;
+    padding: 1rem;
+
+    .grid-item{
+        border: solid 4px;
+        border-color: black;
+        padding: 5%;
+    }
+    .grid-item p{
+        border-radius: 5%;
+        margin-top: 5px;
+    }
+    .grid-item h2{
+        border-radius: 5%;
+        margin-top: 5px;
+      
+    }
+    .grid-item ul li{
+        color: black;
+    }
 }
 
 
