--- a/style.css
+++ b/style.css
@@ -129,6 +129,9 @@ h4{
     font-family: "Pacifico", cursive;
     font-weight: 400;
     font-style: normal;
+    border-radius: 5%;
+    padding: 2%;
+    margin-top: 2%;
   }
   
 .foto{
